<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignalTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="new_provider">New Provider</string>
    <string name="net_operator_name">Network Operator</string>
    <string name="sim_operator_name">Sim Operator:</string>
    <string name="sim_operator_state">Sim State:</string>
    <string name="signal_strength_gsm">GSM:</string>
    <string name="signal_strength_cdma">CDMA:</string>
	<string name="signal_strength_wcdma">WCDMA:</string>
	<string name="signal_strength_lte">LTE:</string>
	<string name="cell_location">Cell Location:</string>
	<string name="active_network">Active Network:</string>
	<string name="cell_phone_info">Cell phone related function:</string>
	<string name="cell_info">Cell Info Func</string>
	<string name="neighbor_cell_info">Neighbor cell Info</string>
	<string name="mobile_active_network">Mobile Network:</string>
	<string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="altitude">Altitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="latitude">Latitude</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="map">Map</string>
    <string name="location_start">Start point!</string>
    <string name="location_started_at_format">Started at %s</string>
    <string name="location_finish">Finish!</string>
    <string name="delete_database">Delete Database</string>
    <string name="is_in_db">Is in DB:</string>
    
</resources>
