<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
	<TableLayout android:id="@+id/current_provider_table"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
    
            <TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >

			    <TextView android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/net_operator_name"
			    	android:gravity="right"
			    	android:paddingRight="5sp"/>
			    
			    <TextView android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/current_net_operator_name"/>   
			</TableRow>
			
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >

			    <TextView android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/sim_operator_state"
			    	android:gravity="right"
			    	android:paddingRight="5sp"/>
			    
			    <TextView android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/current_sim_operator_state"/>   
			</TableRow>
			
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingBottom="8dp" >

			    <TextView android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:text="@string/sim_operator_name"
			    	android:gravity="right"
			    	android:paddingRight="5sp"/>
			    
			    <TextView android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:id="@+id/current_sim_operator_name"/>   
			</TableRow> 
	</TableLayout>
	
	<View android:id="@+id/separator" 
	     android:layout_below = "@id/current_provider_table"
		 android:background="@android:color/darker_gray"
		 android:layout_width = "fill_parent"
		 android:layout_height="10dp"
		 android:layout_centerVertical ="true"/>
	
</RelativeLayout>
